  20. Scriptable MPOLOAD, MPMLOAD, and MPOLOADROOM can now source from a autogen-formatted xml file (such as those for the GENERATE) command.
  21. Random generation system (GENERATE command) now supports random races! See example.xml for more details.
  22. Follower behavior has new flag: NOFOLLOWERS
  23. Obesity can now also be cured by simple starvation.
  
   *. --- FYI Tech Stuff ---
  . Ship Component Tech install skill (AstroEngineering) done-ish... like all tech, it's subject to change without notice.
  . Area editor for planets now includes space positioning editors, including relative positioning calculators.
  . List command now includes SPACE, SPACESHIPS, SPACESHIPAREAS, MOONS, PLANETS, and STARS 
  . Create/Modify/Destroy can now be used to create and alter objects in outer space.
  . Several new "shortcut" item and area types for space: moon, gasgiant, star, dwarfstar, massivestar, planet, moonlet, asteroid, etc.
  . MoneyChanger behavior can now discount currency by its distant origin (farther planet is from origin of currency, less its worth).
   *. finish the dadgum engine thrust adjustment! in GenSpaceShip
   *. interacting items of diff tech level might damage each other
   *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
   *. entry systems for ships (default entry key card, voice code, identifying scanner)
   *. work on automatic component values
   *. make sure shopkeeper item techlevels watch the master tech level
   *. make ship sensor systems
   *. make tractor beam system -- esp important for pirates!
   *. make ship shield systems murder motel again -- some good against phasers, some torpedos, some lasers
   *. make ship phaser, laser systems murder motel again
   *. make ship torpedo launchers and torpedo containers
   *. make ship impulse and warp engines
   *. make ship dampeners
   *. finish main ship software for controlling all this stuff