@@ -1684,6 +1684,9 @@ ACCMSGS=OFF
 # You may also disable a expertise by including the flag EXPERTISE_* where 
 # * is the expertise name, which may include the * as a wildcard at the end.
 #
+# You may also disable a faction by including the flag FACTION_* where 
+# * is the faction id, for example: FACTION_ALIGNMENT.INI
+#
 # The other flags are mostly for testing and debugging purposes.
 #
 # All flag values entered are comma delimited, and include the following:
